# fit_iis_project

./: .dockerignore  .entrypoint.sh  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.txt  alembic.ini  docker-compose-deploy.yml  docker-compose.yml  foo.txt  main.py  postgresql.sql  prometheus.yml  pyproject.toml  test.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 3e9df3b354c5_initial_migration.py  73b35570f61e_reservation_update.py  a0fb280cf237_user_details.py  aee3081fc80d_cleaning.py  c94efd825191_datetime.py  d748d28f5208_organizer.py  e6b5c72a45c9_proto_models.py
app/api/: base.py  models.py
app/api/crud/: base.py  conference.py  image.py  ticket.py  user.py
app/api/v1/routers/: auth.py  conference.py  given_presentation.py  lecture.py  question.py  reservation.py  room.py  ticket.py  user.py  voting.py
app/api/v1/schemas/: __init__.py  conference.py  error.py  given_presentation.py  lecture.py  question.py  reservation.py  room.py  ticket.py  user.py  voting.py
app/services/: __init__.py  admin.py  config.py  database.py  logging.py  permissions.py  utils.py
deploy/: docker-compose-deploy.yml
docs/: Makefile  doc copy.html  doc.html  er.puml  ertmp.puml  permission_mapping.md  sq-model-now.puml  sq-model-system.puml  uc.puml
frontend/: package-lock.json  package.json
frontend/src/: main.js
iis-frontend/: index.html  package.json
iis-frontend/src/components/: ConferencesView.vue  LoginView.vue  MainView.vue  PresentationsView.vue  PublicDetailView.vue  PublicView.vue  RegisterView.vue  ReservationsView.vue  RoomsView.vue  TicketsView.vue  UsersView.vue  VotingView.vue
iis-frontend/src/router/: index.js
iis-frontend/src/services/: utils.js
