[tool.poetry]
name = "fit-iis-projekt"
version = "0.1.0"
description = ""
authors = ["Peter Stahl <peter.stahl@betrian.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^23.0.0"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
alembic = "^1.13.3"
psycopg = {extras = ["async"], version = "^3.2.3"}
python-dotenv = "^1.0.1"
passlib = "^1.7.4"
fastapi-jwt-auth = "^0.5.0"
python-decouple = "^3.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
