[tool.poetry]
name = "fit-iis-projekt"
version = "0.1.0"
description = ""
authors = ["Peter Stahl <peter.stahl@betrian.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^23.0.0"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
alembic = "^1.13.3"
psycopg = {extras = ["async"], version = "^3.2.3"}
python-dotenv = "^1.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pycryptodome = "^3.21.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.17"
prometheus-fastapi-instrumentator = "^7.0.0"
greenlet = "^3.1.1"
pyjwt = "^2.9.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
